<resources>
    <string name="app_name">Hasry</string>
    <string name="map_api_key">AIzaSyAeyMUJgKAhnNXbILHONb1um72CNzELFRY</string>
    <string name="map_key">AIzaSyAeyMUJgKAhnNXbILHONb1um72CNzELFRY</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="open1">open</string>
    <string name="close1">close</string>
    <string name="home">Home</string>
    <string name="notifications">Notifications</string>
    <string name="more">More</string>
    <string name="terms_and_conditions">Terms of use</string>
    <string name="about_app">About</string>
    <string name="contact_us">Contact Us</string>
    <string name="back">Back</string>
    <string name="failed">Failed</string>
    <string name="something">Check internet connection</string>
    <string name="language_settings">Language Settings</string>
    <string name="sar">SAR</string>
    <string name="no_details">No details</string>
    <string name="cancel">Cancel</string>
    <string name="suc">Success !</string>

    <string name="just_now">Just Now</string>
    <string name="a_minute_ago">a min ago</string>
    <string name="min">min</string>
    <string name="an_hour_ago">an hour ago</string>
    <string name="hs">h</string>
    <string name="yesterday">yesterday</string>


    <string name="share">Share</string>
    <string name="edit">Edit</string>
    <string name="price">Price</string>
    <string name="delete">Delete</string>
    <string name="change_language">Change language</string>
    <string name="send">Send</string>
    <string name="ok">OK</string>
    <string name="no_data_to_show">No data to show</string>
    <string name="search2">Search</string>
    <string name="phone">Phone number</string>
    <string name="address">Address</string>
    <string name="email">Email</string>
    <string name="send_a_message">Send a message</string>
    <string name="name">Name</string>
    <string name="subject">Subject</string>
    <string name="message">Message</string>
    <string name="wait">Wait...</string>
    <string name="profile">Profile</string>
    <string name="please_sign_in_or_sign_up">Please sign In or Sign Up</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="new_account">New Account</string>
    <string name="skip">Skip</string>
    <string name="code">Code</string>
    <string name="already_have_an_account">Already have an account !</string>
    <string name="field_required">Field required</string>
    <string name="pass_short">Password too short</string>
    <string name="inv_email">Invalid email</string>
    <string name="perm_img_denied">Permission denied</string>
    <string name="ch_img">Choose Image</string>
    <string name="update_profile">Update Profile</string>
    <string name="no_image">No Image</string>
    <string name="inv_phone">Invalid phone</string>
    <string name="logout">Logout</string>
    <string name="send_code">send code</string>
    <string name="confirmation_code">Confirmation Code</string>
    <string name="confirm">confirm</string>
    <string name="resend">Resend</string>
    <string name="inv_sms_code">Invalid sms code</string>
    <string name="rate_app">Rate App</string>
    <string name="sign_up">Sign Up</string>
    <string name="user_found">User is found</string>
    <string name="download">Download</string>
    <string name="inc_pas">Incorrect Password</string>
    <string name="no_notifications_to_show">No notifications to show</string>
    <string name="favourite">Favorite</string>
    <string name="confirm2">Confirm</string>
    <string name="done">Done</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="perm_image_denied">Permission image denied</string>
    <string name="privacy">Privacy policy</string>
    <string name="upload_image">Upload image</string>
    <string name="main_department">Main department</string>
    <string name="sub_department">Sub department</string>
    <string name="whats_not_av">Not available</string>
    <string name="inv_whatsapp">Invalid whatsApp number</string>
    <string name="inv_url">Invalid url</string>
    <string name="contact_info">Contact info</string>
    <string name="location">Location</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="instagram">Instagram</string>
    <string name="choose">Choose</string>
    <string name="ch_ad_img">Choose ad image</string>
    <string name="show">Show</string>
    <string name="country_code">Country code</string>
    <string name="most_seller">Most Seller</string>
    <string name="most_rate">Most Rate</string>
    <string name="shop_by_category">Shop By Category</string>
    <string name="shop_now">Shop now</string>
    <string name="total">Total</string>
    <string name="checkout">Checkout</string>
    <string name="cart">Cart</string>
    <string name="news">News</string>
    <string name="city">City</string>
    <string name="date_amp_time"><![CDATA[Date & Time]]></string>
    <string name="payment">Payment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="delivery_date">Delivery Date</string>
    <string name="delivery_time">Delivery Time</string>
    <string name="select">Select</string>
    <string name="ch_date">Choose delivery date</string>
    <string name="ch_time">Choose delivery time</string>
    <string name="ch_payment_type">Choose payment type</string>
    <string name="search_criteria">Search Criteria</string>
    <string name="keyword">Keyword</string>
    <string name="need_help">Need Help</string>
    <string name="my_orders">My Orders</string>
    <string name="current">Current</string>
    <string name="prevoius">Previous</string>
    <string name="no_search_results">No Search Results</string>
    <string name="area">Area</string>
    <string name="read_more">Read More</string>
    <string name="news_details">News  Details</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="sub_categoy">Sub Category</string>
    <string name="products">Products</string>
    <string name="grid">Grid</string>
    <string name="list">List</string>
    <string name="view">View</string>
    <string name="my_favorite">My Favorite</string>
    <string name="delete_item">Delete Item ?</string>
    <string name="product_details">Product Details</string>
    <string name="order_num">Order-Num</string>
    <string name="added_suc">"Added to cart"</string>
    <string name="cart_empty">Empty Cart</string>
    <string name="welcome_in_hasry">Welcome In Hasry App</string>
    <string name="enter_verification_code">Enter Verification Code</string>
    <string name="cannot_signup">Cannot sign up without accepting terms and conditions</string>
    <string name="favorite_offers">Favorite Offers</string>
    <string name="show_all">Show All</string>
    <string name="mobile_accessories">Mobil Accessories</string>
    <string name="return1">Return</string>
    <string name="charge">Charge</string>
    <string name="bank_accounts">Bank Accounts</string>
    <string name="offers">Offers</string>
    <string name="filter">Filter</string>
    <string name="normal">Square</string>
    <string name="sign_up_market">Sign Up Market</string>
    <string name="buyer_sign_up">Buyer Sign Up</string>
    <string name="driver_sign_up">Driver Sign Up</string>
    <string name="markets">Markets</string>
    <string name="most_used">Most Used</string>
    <string name="order_details">Order Details</string>
    <string name="client">Client</string>
    <string name="call">Call</string>
    <string name="you">You</string>
    <string name="market">Market</string>
    <string name="total_cost">Total Cost</string>
    <string name="identity_card_image">Identity card image</string>
    <string name="license_image">License image</string>
    <string name="choose_identity_card_image">Choose identity card image</string>
    <string name="choose_license_image">Choose license image</string>
    <string name="select_image_to_upload">Select Image to Upload</string>
    <string name="seller">Seller</string>
    <string name="description">Description</string>
    <string name="details">Details</string>
    <string name="status">Status</string>
    <string name="ch_city">Choose city</string>
    <string name="diff_market">you are trying to buy from different market</string>
    <string name="discount">Discount</string>
    <string name="new_order">Pending</string>
    <string name="in_way">In Way</string>
    <string name="accepted">Accepted</string>
    <string name="refused">Refused</string>
    <string name="completed">Completed</string>
    <string name="driver_name">Driver Name :</string>
    <string name="show_location_on_map">Show location on map</string>
    <string name="amount">Amount : </string>
    <string name="ch_img_car_form">Choose Image Car Form</string>
    <string name="car_form">Car Form</string>
    <string name="ch_neigborhood">Choose NeighborHood</string>
    <string name="you_have_new_order">You Have New Order</string>
    <string name="collected_will_you_get_it_now">Collected, will you get it now?</string>
    <string name="end_oder">end Order</string>
    <string name="num">Num :</string>
    <string name="neigboorhood">NeigboorHood</string>
    <string name="order_detials">Order Detials</string>
    <string name="accept">Accept</string>
    <string name="refuse">Refuse</string>
    <string name="market_not_available">Market is not available</string>
    <string name="delivery_in_progress">Delivery in progress</string>
    <string name="follow_order">Follow Order</string>
    <string name="marker_accept">Market Accept</string>
    <string name="copy">Copy Link</string>
    <string name="link_is_copied">Link is copied</string>
    <string name="account_balance">Account Balance</string>
    <string name="department">Department</string>
    <string name="delivery_price">Delivery price</string>
    <string name="delivery">delivery</string>
    <string name="from_market">from market</string>
    <string name="not_av">not available </string>
    <string name="you_are_blocked">لقد تم حظرك</string>
</resources>
