<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/llCheckout"
                android:layout_marginBottom="5dp"

                />

            <LinearLayout
                android:id="@+id/llCheckout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                android:gravity="center_vertical"
                >
                <LinearLayout
                    android:id="@+id/llTotal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:layout_marginBottom="5dp"
                    android:visibility="gone"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        android:textColor="@color/colorPrimary"
                        android:text="@string/total"
                        />

                    <TextView
                        android:id="@+id/tvTotal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="15sp"
                        android:textColor="@color/colorPrimary"
                        android:text="0.0$"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="20dp"
                        />
                </LinearLayout>

                <Button
                    android:id="@+id/btnCheckout"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@drawable/rounded_primary_btn"

                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:textColor="@color/white"
                    android:textSize="17sp"
                    android:text="@string/checkout"
                    android:visibility="gone"
                    />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:id="@+id/llEmptyCart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_gravity="center"
            android:visibility="visible"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimaryDark"
                android:gravity="center"
                android:textSize="22sp"
                android:layout_margin="10dp"
                android:text="@string/cart_empty"/>
            <ImageView
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:src="@drawable/ic_cart"
                android:tint="@color/colorPrimary"
                />
            <androidx.cardview.widget.CardView
                android:id="@+id/btnShop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardCornerRadius="5dp"
                app:cardBackgroundColor="@color/white"
                app:cardElevation="3dp"
                android:layout_marginTop="20dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="3dp"
                >
                <Button
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:background="@color/transparent"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp"
                    android:text="@string/shop_now"
                    android:clickable="false"
                    android:longClickable="false"
                    />
            </androidx.cardview.widget.CardView>
        </LinearLayout>

    </FrameLayout>
</layout>