<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="action"
            type="com.hasry.interfaces.Listeners.NextPreviousAction" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/ll"
            android:layout_marginBottom="20dp"

            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:textSize="18sp"
                android:textColor="@color/colorPrimary"
                android:text="@string/date_amp_time"/>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardElevation="3dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="10dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="20dp"

                >
                <LinearLayout
                    android:id="@+id/llDate"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:orientation="horizontal"
                    android:weightSum="1"
                    android:paddingStart="15dp"
                    android:paddingEnd="15dp"



                    >

                    <TextView
                        android:id="@+id/tvDate"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight=".85"
                        android:clickable="false"
                        android:gravity="center_vertical"
                        android:hint="@string/delivery_date"
                        android:textColorHint="@color/gray4"
                        android:longClickable="false"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        android:singleLine="true"
                        android:textColor="@color/colorPrimary"
                        android:textSize="15sp"


                        />

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight=".15"
                        android:clickable="false"
                        android:longClickable="false"
                        android:padding="12dp"
                        android:src="@drawable/ic_calendar"
                        android:tint="@color/colorPrimary"


                        />
                </LinearLayout>

            </androidx.cardview.widget.CardView>



            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardElevation="3dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="10dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"

                >
                <LinearLayout
                    android:id="@+id/llTime"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:orientation="horizontal"
                    android:weightSum="1"
                    android:paddingStart="15dp"
                    android:paddingEnd="15dp"



                    >

                    <TextView
                        android:id="@+id/tvTime"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight=".85"
                        android:clickable="false"
                        android:gravity="center_vertical"
                        android:hint="@string/delivery_time"
                        android:longClickable="false"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        android:singleLine="true"
                        android:textColorHint="@color/gray4"
                        android:textColor="@color/colorPrimary"
                        android:textSize="15sp"


                        />

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight=".15"
                        android:clickable="false"
                        android:longClickable="false"
                        android:padding="12dp"
                        android:src="@drawable/ic_clock"
                        android:tint="@color/colorPrimary"


                        />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>


        <LinearLayout
            android:id="@+id/ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            >
            <Button
                android:id="@+id/btnNext"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/rounded_primary_btn"
                android:textColor="@color/white"
                android:textSize="17sp"
                android:text="@string/next"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:onClick="@{()->action.onNext()}"
                />
            <Button
                android:id="@+id/btnPrevious"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/rounded_white"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="17sp"
                android:text="@string/previous"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:onClick="@{()->action.onPrevious()}"

                />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
